--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
           <div id="testimonial-mf" class="owl-carousel owl-theme">
             <div class="testimonial-box">
               <div class="author-test">
-                <img src="img\Amelia.jpeg" alt="" class="rounded-circle b-shadow-a">
+                <img src="#" alt="" class="rounded-circle b-shadow-a">
                 <span class="author">Amelia</span>
               </div>
               <div class="content-test">
@@ -415,7 +415,7 @@
             </div>
             <div class="testimonial-box">
               <div class="author-test">
-                <img src="img\Amelia.jpeg" alt="" class="rounded-circle b-shadow-a">
+                <img src="#" alt="" class="rounded-circle b-shadow-a">
                 <span class="author">Amelia</span>
               </div>
               <div class="content-test">
