--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             <div class="testimonial-box">
               <div class="author-test">
                 <img src="#" alt="" class="rounded-circle b-shadow-a">
-                <span class="author">Amelia</span>
+                <span class="author">George</span>
               </div>
               <div class="content-test">
                 <p class="description lead">
