--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content="" name="keywords">
   <meta content="" name="description">
 
-  <link rel="shortcut icon" href="img/stallionslogo.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,9 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">StallionsTechies</a>
+      <a class="navbar-brand js-scroll" href="#page-top">
+        <img src="img\logo.png" alt="StallionsTechies Logo" style="height: 45px;">
+      </a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -69,14 +71,14 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/jaymiepic.jpeg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/jaymiepic.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am James Kiumi</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">CEO Stallions Techies,A Web Developer,A Web Designer,A Frontend Developer,A Database Manager,A Social Media Platforms Manager</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">CEO Stallions Techies,A Cybersecurity Engineer,A Frontend Developer,A Database Manager,A Cloud Engineer.</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -94,38 +96,59 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/jaymiepic.jpeg" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/jaymiepic.jpg" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>James Kiumi</span></p>
-                      <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
+                      <p><span class="title-s">Profile: </span> <span>Cybersecurity Engineer</span></p>
                       <p><span class="title-s">Email: </span> <span>jimkiumi5@gmail.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>+254757200207</span></p>
+                      <p><span class="title-s">Linkedin: </span><a href="https://www.linkedin.com/in/james-maina-a40083230" target="_blank" style="text-decoration: none; color: inherit;">James Maina</a></p>
                     </div>
                   </div>
                 </div>
                 <div class="skill-mf">
-                  <p class="title-s">Skill</p>
-                  <span>HTML</span> <span class="pull-right">85%</span>
+                  <p class="title-s">Skills</p>
+                  <span> Penetration Testing</span> <span class="pull-right">85%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>CSS3</span> <span class="pull-right">75%</span>
+                  <span> Threat Analysis</span> <span class="pull-right">85%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>PHP</span> <span class="pull-right">50%</span>
+                  <span> Incident Response</span> <span class="pull-right">85%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
+                  <span>  SOC Reporting</span> <span class="pull-right">90%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>  Digital Forensics</span> <span class="pull-right">85%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span> Cloud Computing</span> <span class="pull-right">70%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span> Programming: (Python, PHP, JavaScript, C#, SQL, HTML, CSS)</span> <span class="pull-right">90%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>  Technical Support</span> <span class="pull-right">95%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
@@ -138,18 +161,20 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    I'm James Maina, with a strong background in Computing and Information Systems, driven by a 
-                    passion for technology's societal impact. Through hands-on experience, I've honed 
-                    skills in programming languages and software development methodologies, always seeking new challenges.
+                    I'm James Maina, a Certified Cybersecurity Engineer with a strong background in Computing and Information Systems, 
+                    passionate about building secure and resilient digital environments. My expertise spans system security, 
+                    penetration testing, vulnerability management, and cloud computing technologies, including AWS, Microsoft Azure, 
+                    and IBM Cloud.
                   </p>
                   <p class="lead">
-                    I'm dedicated to using technology for positive change, aiming to innovate and 
-                    solve real-world problems. I'm committed to contributing to a future where technology fosters 
-                    progress and inclusivity, whether through software solutions or collaborative projects.
+                    I’ve gained hands-on experience securing IT infrastructures, configuring security tools, and performing both 
+                    offensive and defensive security operations. I hold a BSc in Computing and Information Systems and the 
+                    CompTIA Security+ certification. My technical toolkit includes Splunk, Wireshark, and Security Onion, 
+                    along with programming proficiency in Python, JavaScript, PHP, C#, HTML, CSS, and SQL.
                   </p>
                   <p class="lead">
-                    I'm enthusiastic about sharing knowledge and mentoring others in the field, eager 
-                    to connect with fellow technologists who share a passion for innovation and problem-solving.
+                    I’m driven by a deep interest in strengthening cybersecurity resilience and advancing technology that promotes 
+                    trust, innovation, and digital safety across organizations and communities.
                   </p>
                 </div>
               </div>
@@ -180,13 +205,42 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
+              <span class="ico-circle"><i class="ion-locked"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Cybersecurity Services</h2>
+              <p class="s-description text-center">
+                "Safeguard your digital assets with my comprehensive Cybersecurity solutions. 
+                I specialize in the following services to ensure your systems remain secure and resilient:
+                Digital Forensics, Penetration Testing, SOC Reporting, Threat Analysis, Incident Response, Security Management"
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-cloud"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Cloud Computing</h2>
+              <p class="s-description text-center">
+                "Empower your business with scalable and secure Cloud Computing solutions. I provide a wide range of services to help you migrate, manage, and optimize your cloud infrastructure: 
+                Cloud Deployment (AWS, Azure, GCP, IBM), Cloud Infrastructure Management, Cloud Security and Compliance, Data Backup and Recovery, Cloud Cost Optimization, Hybrid and Multi-Cloud Solutions"
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
               <span class="ico-circle"><i class="ion-monitor"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Web Design</h2>
+              <h2 class="s-title">Graphic Design</h2>
               <p class="s-description text-center">
-                "Welcome to my Web Design Services section, where creativity meets functionality. Here, 
-                I offer tailored solutions to elevate your online presence and engage your audience effectively."
+                "Welcome to my Graphic Design Services section, where creativity meets functionality. Here, 
+                I offer tailored solutions to create eye catching Designs and engage your audience effectively."
               </p>
             </div>
           </div>
@@ -236,6 +290,22 @@
           </div>
         </div>
         <div class="col-md-4">
+  <div class="service-box">
+    <div class="service-ico">
+      <span class="ico-circle"><i class="ion-headphone"></i></span>
+    </div>
+    <div class="service-content">
+      <h2 class="s-title">Technical Support Services</h2>
+      <p class="s-description text-center">
+        "Delivering reliable and efficient Technical Support to ensure your systems run smoothly and your users stay productive. 
+        My services cover a broad range of IT support solutions, including: Hardware and Software Troubleshooting, 
+        System Installation and Configuration, Network Setup and Maintenance, User Training and Support, Preventive Maintenance, Remote and On-site Assistance
+      </p>
+    </div>
+  </div>
+</div>
+
+        <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="ion-social-buffer"></i></span>
@@ -256,7 +326,7 @@
               <span class="ico-circle"><i class="ion-stats-bars"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Marketing Services</h2>
+              <h2 class="s-title">Digital Marketing Services</h2>
               <p class="s-description text-center">
                 "I specialize in crafting strategic solutions tailored to amplify your brand's reach and impact. 
                 With a keen eye for market trends and a commitment to driving results, I'm here to elevate your 
@@ -281,7 +351,7 @@
             </div>
             <div class="counter-num">
               <p class="counter">10</p>
-              <span class="counter-text">WORKS COMPLETED</span>
+              <span class="counter-text">PROJECTS COMPLETED</span>
             </div>
           </div>
         </div>
@@ -313,8 +383,8 @@
               <span class="ico-circle"><i class="ion-ribbon-a"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">2</p>
-              <span class="counter-text">AWARD WON</span>
+              <p class="counter">0</p>
+              <span class="counter-text">AWARDS WON</span>
             </div>
           </div>
         </div>
@@ -393,7 +463,7 @@
   <!--/ Section Portfolio End /-->
 
   <!--/ Section Testimonials Star /-->
-  <div class="testimonials paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
+  <div class="testimonials paralax-mf bg-image" style="background-image: url(img/overlay.png)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -401,8 +471,8 @@
           <div id="testimonial-mf" class="owl-carousel owl-theme">
             <div class="testimonial-box">
               <div class="author-test">
-                <img src="#" alt="" class="rounded-circle b-shadow-a">
-                <span class="author">George</span>
+                <img src="img\lady.png" alt="" class="rounded-circle b-shadow-a">
+                <span class="author">Angel</span>
               </div>
               <div class="content-test">
                 <p class="description lead">
@@ -415,8 +485,8 @@
             </div>
             <div class="testimonial-box">
               <div class="author-test">
-                <img src="#" alt="" class="rounded-circle b-shadow-a">
-                <span class="author">Amelia</span>
+                <img src="img\man.png" alt="" class="rounded-circle b-shadow-a">
+                <span class="author">John</span>
               </div>
               <div class="content-test">
                 <p class="description lead">
@@ -453,7 +523,7 @@
         <div class="col-md-4">
           <div class="card card-blog">
             <div class="card-img">
-              <a href="blog-single.html"><img src="img/post1.jpg" alt="" class="img-fluid"></a>
+              <a href="blog-single.html"><img src="img/site.png" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
@@ -483,7 +553,7 @@
         <div class="col-md-4">
           <div class="card card-blog">
             <div class="card-img">
-              <a href="blog-single.html"><img src="img/post2.jpeg" alt="" class="img-fluid"></a>
+              <a href="blog-single.html"><img src="img/innovation.png" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
@@ -514,7 +584,7 @@
         <div class="col-md-4">
           <div class="card card-blog">
             <div class="card-img">
-              <a href="blog-single.html"><img src="img/post-3.jpg" alt="" class="img-fluid"></a>
+              <a href="blog-single.html"><img src="img/security.png" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
@@ -547,7 +617,7 @@
   <!--/ Section Blog End /-->
 
   <!--/ Section Contact-Footer Star /-->
-  <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/overlay-bg.jpg)">
+  <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/overlay.png)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -646,6 +716,11 @@
     </footer>
   </section>
   <!--/ Section Contact-footer End /-->
+  
+  <!-- WhatsApp Floating Button -->
+  <a href="https://wa.me/254757200207" class="whatsapp-float" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Chat" class="whatsapp-icon">
+  </a>
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <div id="preloader"></div>
