--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content="" name="keywords">
   <meta content="" name="description">
 
-  <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="img/ST-TOP.png" type="image/x-icon">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
